--- a/src/app/dashboard/epp/epp.component.css
+++ b/src/app/dashboard/epp/epp.component.css
@@ -7,3 +7,16 @@
 .ftrBtnWrap .btn:not(:disabled):not(.disabled){opacity: 1;
     background: #0072ce;
     color:white;}
+
+    .your-class div{
+        padding: 10px;
+        border:1px solid red;
+        margin: 10px;
+      }
+      
+      .leaseCardSelected{
+        border: 1px solid green !important;
+      }
+      .slick-slide{
+        width: 300px;
+        }
