--- a/src/app/dashboard/epp/epp.component.html
+++ b/src/app/dashboard/epp/epp.component.html
@@ -54,9 +54,11 @@
   
   
           <!--Epp Lease toggles Starts-->
-          <div class="row">
-            <div class="toggleWrap" *ngIf="leaseData">
-              <div class="toggle-item-wrap" [ngClass]="{ 'active': leaseFormGroup.controls[item.leaseNo].value }"
+          <!-- <div class=""> -->
+            <div class="" *ngIf="leaseData">
+                <div class="lease-prev">Prev</div>
+                <div class="lease-next">Next</div>
+              <div class="your-class" [ngClass]="{ 'active': leaseFormGroup.controls[item.leaseNo].value }"
                    *ngFor="let item of leaseData">
                 <div class="leftWrap">
                   <p class="">Lease #</p>
@@ -75,7 +77,7 @@
               </div>
             </div>
   
-          </div>
+          <!-- </div> -->
           <!--Epp Lease toggles Ends-->
   
         </div>
