--- a/src/app/dashboard/home/lease-block/lease-block.component.css
+++ b/src/app/dashboard/home/lease-block/lease-block.component.css
@@ -1,9 +1,12 @@
 .your-class div{
-  padding: 10px;
-  border:1px solid red;
-  margin: 10px;
-}
-
-.leaseCardSelected{
-  border: 1px solid green !important;
-}
+    padding: 10px;
+    border:1px solid red;
+    margin: 10px;
+  }
+  
+  .leaseCardSelected{
+    border: 1px solid green !important;
+  }
+  .slick-slide{
+    width: 180px;
+    }
